fix: Corrige possivel exeção da classe sorteio